--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -117,8 +117,8 @@ span {
 }
 
 .navbar-light .navbar-toggler:focus, .navbar-light .navbar-toggler-icon:focus-visible {
-    outline: none;
-    box-shadow: none;
+    outline: none !important;
+    box-shadow: none !important;
 }
 
 @media (max-width: 576px) {
@@ -217,6 +217,7 @@ span {
 }
 
 .feature .feature-item .title {
+    text-align: left;
     margin-bottom: 0;
     color: var(--primary-darkblue);
 }
@@ -284,7 +285,6 @@ span {
 @media (max-width: 576px) {
     .benefit .image .illustration {
         max-width: 360px;
-        margin-bottom: 1rem;
     }
 
     .benefit .btn {
